Bug 122027. Canonify URI before looking it up in the cache. sr=darin.